tests/cases/compiler-development/artifact/errors/diagnostic-ffi-extern-varargs-nonextern.diagnostic
diagnostic error code=A0001 family=abi message="variadic parameters are only supported on extern \"C\" functions" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/ffi/errors/extern-varargs-nonextern.ari" display="tests/cases/ffi/errors/extern-varargs-nonextern.ari" bytes=51
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/extern-varargs-nonextern.ari" line=1 column=24 end_line=1 end_column=27 byte_start=23 byte_end=26 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/extern-varargs-nonextern.ari:1:24\n   |\n 1 | fn log(format: string, ...) -> i64 {\n   |                        ^^^"
  Note index=0 location=none message="Ari only models variadic calls through the platform C ABI"
  Help index=0 location=none message="use extern \"C\" for C varargs, or replace the varargs with fixed Ari parameters"
